# kmer-hasher

./: Cargo.toml  README.md
benches/: hashing.rs
src/: main.rs
